cmake_minimum_required(VERSION 3.16)
project(ai_inference VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(${PROJECT_SOURCE_DIR}/include)

# 主程序
add_executable(ai_demo src/main.cpp src/utils.cpp)

# 容器练习程序
add_executable(container_demo src/demo.cpp)
